# serializer version: 1
# name: test_all_entities[sensor.0000123456ab123_forecast_price-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.0000123456ab123_forecast_price',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Forecast price',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Forecast price',
    'platform': 'ecosmart',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'forecast_price',
    'unique_id': '0000123456AB123-forecast_price',
    'unit_of_measurement': 'c/kWh',
  })
# ---
# name: test_all_entities[sensor.0000123456ab123_forecast_price-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.ATTRIBUTION: 'attribution'>: 'Data provided by ecosmart',
      'covered_hours': 34.0,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: '0000123456AB123 Forecast price',
      'points': list([
        dict({
          'price_cents_per_kwh_excl_gst': 6.64,
          'price_cents_per_kwh_incl_gst': 7.636,
          'price_dollars_per_mwh': 66.4,
          'schedule': 'S',
          'starts_at': '2026-08-24T12:00:00+00:00',
          'trading_date': '2026-08-25',
          'trading_period': 1,
        }),
        dict({
          'price_cents_per_kwh_excl_gst': 3.43,
          'price_cents_per_kwh_incl_gst': 3.9445,
          'price_dollars_per_mwh': 34.3,
          'schedule': 'S',
          'starts_at': '2026-08-24T12:30:00+00:00',
          'trading_date': '2026-08-25',
          'trading_period': 2,
        }),
        dict({
          'price_cents_per_kwh_excl_gst': 3.334,
          'price_cents_per_kwh_incl_gst': 3.8341,
          'price_dollars_per_mwh': 33.34,
          'schedule': 'S',
          'starts_at': '2026-08-24T13:00:00+00:00',
          'trading_date': '2026-08-25',
          'trading_period': 3,
        }),
        dict({
          'price_cents_per_kwh_excl_gst': 3.738,
          'price_cents_per_kwh_incl_gst': 4.2987,
          'price_dollars_per_mwh': 37.38,
          'schedule': 'S',
          'starts_at': '2026-08-24T13:30:00+00:00',
          'trading_date': '2026-08-25',
          'trading_period': 4,
        }),
        dict({
          'price_cents_per_kwh_excl_gst': 3.338,
          'price_cents_per_kwh_incl_gst': 3.8387,
          'price_dollars_per_mwh': 33.38,
          'schedule': 'S',
          'starts_at': '2026-08-24T14:00:00+00:00',
          'trading_date': '2026-08-25',
          'trading_period': 5,
        }),
        dict({
          'price_cents_per_kwh_excl_gst': 3.388,
          'price_cents_per_kwh_incl_gst': 3.8962,
          'price_dollars_per_mwh': 33.88,
          'schedule': 'S',
          'starts_at': '2026-08-24T14:30:00+00:00',
          'trading_date': '2026-08-25',
          'trading_period': 6,
        }),
        dict({
          'price_cents_per_kwh_excl_gst': 3.325,
          'price_cents_per_kwh_incl_gst': 3.8238,
          'price_dollars_per_mwh': 33.25,
          'schedule': 'S',
          'starts_at': '2026-08-24T15:00:00+00:00',
          'trading_date': '2026-08-25',
          'trading_period': 7,
        }),
        dict({
          'price_cents_per_kwh_excl_gst': 1.096,
          'price_cents_per_kwh_incl_gst': 1.2604,
          'price_dollars_per_mwh': 10.96,
          'schedule': 'S',
          'starts_at': '2026-08-24T15:30:00+00:00',
          'trading_date': '2026-08-25',
          'trading_period': 8,
        }),
        dict({
          'price_cents_per_kwh_excl_gst': 0.199,
          'price_cents_per_kwh_incl_gst': 0.2289,
          'price_dollars_per_mwh': 1.99,
          'schedule': 'L',
          'starts_at': '2026-08-24T16:00:00+00:00',
          'trading_date': '2026-08-25',
          'trading_period': 9,
        }),
        dict({
          'price_cents_per_kwh_excl_gst': 3.536,
          'price_cents_per_kwh_incl_gst': 4.0664,
          'price_dollars_per_mwh': 35.36,
          'schedule': 'L',
          'starts_at': '2026-08-24T16:30:00+00:00',
          'trading_date': '2026-08-25',
          'trading_period': 10,
        }),
        dict({
          'price_cents_per_kwh_excl_gst': 3.792,
          'price_cents_per_kwh_incl_gst': 4.3608,
          'price_dollars_per_mwh': 37.92,
          'schedule': 'L',
          'starts_at': '2026-08-24T17:00:00+00:00',
          'trading_date': '2026-08-25',
          'trading_period': 11,
        }),
        dict({
          'price_cents_per_kwh_excl_gst': 3.737,
          'price_cents_per_kwh_incl_gst': 4.2976,
          'price_dollars_per_mwh': 37.37,
          'schedule': 'L',
          'starts_at': '2026-08-24T17:30:00+00:00',
          'trading_date': '2026-08-25',
          'trading_period': 12,
        }),
        dict({
          'price_cents_per_kwh_excl_gst': 6.078,
          'price_cents_per_kwh_incl_gst': 6.9897,
          'price_dollars_per_mwh': 60.78,
          'schedule': 'L',
          'starts_at': '2026-08-24T18:00:00+00:00',
          'trading_date': '2026-08-25',
          'trading_period': 13,
        }),
        dict({
          'price_cents_per_kwh_excl_gst': 6.821,
          'price_cents_per_kwh_incl_gst': 7.8442,
          'price_dollars_per_mwh': 68.21,
          'schedule': 'L',
          'starts_at': '2026-08-24T18:30:00+00:00',
          'trading_date': '2026-08-25',
          'trading_period': 14,
        }),
        dict({
          'price_cents_per_kwh_excl_gst': 7.498,
          'price_cents_per_kwh_incl_gst': 8.6227,
          'price_dollars_per_mwh': 74.98,
          'schedule': 'L',
          'starts_at': '2026-08-24T19:00:00+00:00',
          'trading_date': '2026-08-25',
          'trading_period': 15,
        }),
        dict({
          'price_cents_per_kwh_excl_gst': 8.687,
          'price_cents_per_kwh_incl_gst': 9.9901,
          'price_dollars_per_mwh': 86.87,
          'schedule': 'L',
          'starts_at': '2026-08-24T19:30:00+00:00',
          'trading_date': '2026-08-25',
          'trading_period': 16,
        }),
        dict({
          'price_cents_per_kwh_excl_gst': 7.493,
          'price_cents_per_kwh_incl_gst': 8.617,
          'price_dollars_per_mwh': 74.93,
          'schedule': 'L',
          'starts_at': '2026-08-24T20:00:00+00:00',
          'trading_date': '2026-08-25',
          'trading_period': 17,
        }),
        dict({
          'price_cents_per_kwh_excl_gst': 2.009,
          'price_cents_per_kwh_incl_gst': 2.3104,
          'price_dollars_per_mwh': 20.09,
          'schedule': 'L',
          'starts_at': '2026-08-24T20:30:00+00:00',
          'trading_date': '2026-08-25',
          'trading_period': 18,
        }),
        dict({
          'price_cents_per_kwh_excl_gst': 1.757,
          'price_cents_per_kwh_incl_gst': 2.0206,
          'price_dollars_per_mwh': 17.57,
          'schedule': 'L',
          'starts_at': '2026-08-24T21:00:00+00:00',
          'trading_date': '2026-08-25',
          'trading_period': 19,
        }),
        dict({
          'price_cents_per_kwh_excl_gst': 1.13,
          'price_cents_per_kwh_incl_gst': 1.2995,
          'price_dollars_per_mwh': 11.3,
          'schedule': 'L',
          'starts_at': '2026-08-24T21:30:00+00:00',
          'trading_date': '2026-08-25',
          'trading_period': 20,
        }),
        dict({
          'price_cents_per_kwh_excl_gst': 1.246,
          'price_cents_per_kwh_incl_gst': 1.4329,
          'price_dollars_per_mwh': 12.46,
          'schedule': 'L',
          'starts_at': '2026-08-24T22:00:00+00:00',
          'trading_date': '2026-08-25',
          'trading_period': 21,
        }),
        dict({
          'price_cents_per_kwh_excl_gst': 1.28,
          'price_cents_per_kwh_incl_gst': 1.472,
          'price_dollars_per_mwh': 12.8,
          'schedule': 'L',
          'starts_at': '2026-08-24T22:30:00+00:00',
          'trading_date': '2026-08-25',
          'trading_period': 22,
        }),
        dict({
          'price_cents_per_kwh_excl_gst': 0.639,
          'price_cents_per_kwh_incl_gst': 0.7349,
          'price_dollars_per_mwh': 6.39,
          'schedule': 'L',
          'starts_at': '2026-08-24T23:00:00+00:00',
          'trading_date': '2026-08-25',
          'trading_period': 23,
        }),
        dict({
          'price_cents_per_kwh_excl_gst': 1.119,
          'price_cents_per_kwh_incl_gst': 1.2869,
          'price_dollars_per_mwh': 11.19,
          'schedule': 'L',
          'starts_at': '2026-08-24T23:30:00+00:00',
          'trading_date': '2026-08-25',
          'trading_period': 24,
        }),
        dict({
          'price_cents_per_kwh_excl_gst': 0.638,
          'price_cents_per_kwh_incl_gst': 0.7337,
          'price_dollars_per_mwh': 6.38,
          'schedule': 'L',
          'starts_at': '2026-08-25T00:00:00+00:00',
          'trading_date': '2026-08-25',
          'trading_period': 25,
        }),
        dict({
          'price_cents_per_kwh_excl_gst': 0.628,
          'price_cents_per_kwh_incl_gst': 0.7222,
          'price_dollars_per_mwh': 6.28,
          'schedule': 'L',
          'starts_at': '2026-08-25T00:30:00+00:00',
          'trading_date': '2026-08-25',
          'trading_period': 26,
        }),
        dict({
          'price_cents_per_kwh_excl_gst': 0.625,
          'price_cents_per_kwh_incl_gst': 0.7188,
          'price_dollars_per_mwh': 6.25,
          'schedule': 'L',
          'starts_at': '2026-08-25T01:00:00+00:00',
          'trading_date': '2026-08-25',
          'trading_period': 27,
        }),
        dict({
          'price_cents_per_kwh_excl_gst': 0.624,
          'price_cents_per_kwh_incl_gst': 0.7176,
          'price_dollars_per_mwh': 6.24,
          'schedule': 'L',
          'starts_at': '2026-08-25T01:30:00+00:00',
          'trading_date': '2026-08-25',
          'trading_period': 28,
        }),
        dict({
          'price_cents_per_kwh_excl_gst': 0.632,
          'price_cents_per_kwh_incl_gst': 0.7268,
          'price_dollars_per_mwh': 6.32,
          'schedule': 'L',
          'starts_at': '2026-08-25T02:00:00+00:00',
          'trading_date': '2026-08-25',
          'trading_period': 29,
        }),
        dict({
          'price_cents_per_kwh_excl_gst': 0.627,
          'price_cents_per_kwh_incl_gst': 0.7211,
          'price_dollars_per_mwh': 6.27,
          'schedule': 'L',
          'starts_at': '2026-08-25T02:30:00+00:00',
          'trading_date': '2026-08-25',
          'trading_period': 30,
        }),
        dict({
          'price_cents_per_kwh_excl_gst': 0.636,
          'price_cents_per_kwh_incl_gst': 0.7314,
          'price_dollars_per_mwh': 6.36,
          'schedule': 'L',
          'starts_at': '2026-08-25T03:00:00+00:00',
          'trading_date': '2026-08-25',
          'trading_period': 31,
        }),
        dict({
          'price_cents_per_kwh_excl_gst': 1.974,
          'price_cents_per_kwh_incl_gst': 2.2701,
          'price_dollars_per_mwh': 19.74,
          'schedule': 'L',
          'starts_at': '2026-08-25T03:30:00+00:00',
          'trading_date': '2026-08-25',
          'trading_period': 32,
        }),
        dict({
          'price_cents_per_kwh_excl_gst': 5.385,
          'price_cents_per_kwh_incl_gst': 6.1928,
          'price_dollars_per_mwh': 53.85,
          'schedule': 'L',
          'starts_at': '2026-08-25T04:00:00+00:00',
          'trading_date': '2026-08-25',
          'trading_period': 33,
        }),
        dict({
          'price_cents_per_kwh_excl_gst': 5.475,
          'price_cents_per_kwh_incl_gst': 6.2963,
          'price_dollars_per_mwh': 54.75,
          'schedule': 'L',
          'starts_at': '2026-08-25T04:30:00+00:00',
          'trading_date': '2026-08-25',
          'trading_period': 34,
        }),
        dict({
          'price_cents_per_kwh_excl_gst': 5.476,
          'price_cents_per_kwh_incl_gst': 6.2974,
          'price_dollars_per_mwh': 54.76,
          'schedule': 'L',
          'starts_at': '2026-08-25T05:00:00+00:00',
          'trading_date': '2026-08-25',
          'trading_period': 35,
        }),
        dict({
          'price_cents_per_kwh_excl_gst': 9.419,
          'price_cents_per_kwh_incl_gst': 10.8319,
          'price_dollars_per_mwh': 94.19,
          'schedule': 'L',
          'starts_at': '2026-08-25T05:30:00+00:00',
          'trading_date': '2026-08-25',
          'trading_period': 36,
        }),
        dict({
          'price_cents_per_kwh_excl_gst': 10.166,
          'price_cents_per_kwh_incl_gst': 11.6909,
          'price_dollars_per_mwh': 101.66,
          'schedule': 'L',
          'starts_at': '2026-08-25T06:00:00+00:00',
          'trading_date': '2026-08-25',
          'trading_period': 37,
        }),
        dict({
          'price_cents_per_kwh_excl_gst': 11.016,
          'price_cents_per_kwh_incl_gst': 12.6684,
          'price_dollars_per_mwh': 110.16,
          'schedule': 'L',
          'starts_at': '2026-08-25T06:30:00+00:00',
          'trading_date': '2026-08-25',
          'trading_period': 38,
        }),
        dict({
          'price_cents_per_kwh_excl_gst': 9.318,
          'price_cents_per_kwh_incl_gst': 10.7157,
          'price_dollars_per_mwh': 93.18,
          'schedule': 'L',
          'starts_at': '2026-08-25T07:00:00+00:00',
          'trading_date': '2026-08-25',
          'trading_period': 39,
        }),
        dict({
          'price_cents_per_kwh_excl_gst': 9.093,
          'price_cents_per_kwh_incl_gst': 10.457,
          'price_dollars_per_mwh': 90.93,
          'schedule': 'L',
          'starts_at': '2026-08-25T07:30:00+00:00',
          'trading_date': '2026-08-25',
          'trading_period': 40,
        }),
        dict({
          'price_cents_per_kwh_excl_gst': 9.446,
          'price_cents_per_kwh_incl_gst': 10.8629,
          'price_dollars_per_mwh': 94.46,
          'schedule': 'L',
          'starts_at': '2026-08-25T08:00:00+00:00',
          'trading_date': '2026-08-25',
          'trading_period': 41,
        }),
        dict({
          'price_cents_per_kwh_excl_gst': 6.296,
          'price_cents_per_kwh_incl_gst': 7.2404,
          'price_dollars_per_mwh': 62.96,
          'schedule': 'L',
          'starts_at': '2026-08-25T08:30:00+00:00',
          'trading_date': '2026-08-25',
          'trading_period': 42,
        }),
        dict({
          'price_cents_per_kwh_excl_gst': 9.984,
          'price_cents_per_kwh_incl_gst': 11.4816,
          'price_dollars_per_mwh': 99.84,
          'schedule': 'L',
          'starts_at': '2026-08-25T09:00:00+00:00',
          'trading_date': '2026-08-25',
          'trading_period': 43,
        }),
        dict({
          'price_cents_per_kwh_excl_gst': 5.834,
          'price_cents_per_kwh_incl_gst': 6.7091,
          'price_dollars_per_mwh': 58.34,
          'schedule': 'L',
          'starts_at': '2026-08-25T09:30:00+00:00',
          'trading_date': '2026-08-25',
          'trading_period': 44,
        }),
        dict({
          'price_cents_per_kwh_excl_gst': 5.501,
          'price_cents_per_kwh_incl_gst': 6.3262,
          'price_dollars_per_mwh': 55.01,
          'schedule': 'L',
          'starts_at': '2026-08-25T10:00:00+00:00',
          'trading_date': '2026-08-25',
          'trading_period': 45,
        }),
        dict({
          'price_cents_per_kwh_excl_gst': 5.417,
          'price_cents_per_kwh_incl_gst': 6.2296,
          'price_dollars_per_mwh': 54.17,
          'schedule': 'L',
          'starts_at': '2026-08-25T10:30:00+00:00',
          'trading_date': '2026-08-25',
          'trading_period': 46,
        }),
        dict({
          'price_cents_per_kwh_excl_gst': 5.439,
          'price_cents_per_kwh_incl_gst': 6.2549,
          'price_dollars_per_mwh': 54.39,
          'schedule': 'L',
          'starts_at': '2026-08-25T11:00:00+00:00',
          'trading_date': '2026-08-25',
          'trading_period': 47,
        }),
        dict({
          'price_cents_per_kwh_excl_gst': 5.461,
          'price_cents_per_kwh_incl_gst': 6.2802,
          'price_dollars_per_mwh': 54.61,
          'schedule': 'L',
          'starts_at': '2026-08-25T11:30:00+00:00',
          'trading_date': '2026-08-25',
          'trading_period': 48,
        }),
        dict({
          'price_cents_per_kwh_excl_gst': 5.575,
          'price_cents_per_kwh_incl_gst': 6.4113,
          'price_dollars_per_mwh': 55.75,
          'schedule': 'L',
          'starts_at': '2026-08-25T12:00:00+00:00',
          'trading_date': '2026-08-26',
          'trading_period': 1,
        }),
        dict({
          'price_cents_per_kwh_excl_gst': 5.262,
          'price_cents_per_kwh_incl_gst': 6.0513,
          'price_dollars_per_mwh': 52.62,
          'schedule': 'L',
          'starts_at': '2026-08-25T12:30:00+00:00',
          'trading_date': '2026-08-26',
          'trading_period': 2,
        }),
        dict({
          'price_cents_per_kwh_excl_gst': 5.474,
          'price_cents_per_kwh_incl_gst': 6.2951,
          'price_dollars_per_mwh': 54.74,
          'schedule': 'L',
          'starts_at': '2026-08-25T13:00:00+00:00',
          'trading_date': '2026-08-26',
          'trading_period': 3,
        }),
        dict({
          'price_cents_per_kwh_excl_gst': 5.691,
          'price_cents_per_kwh_incl_gst': 6.5447,
          'price_dollars_per_mwh': 56.91,
          'schedule': 'L',
          'starts_at': '2026-08-25T13:30:00+00:00',
          'trading_date': '2026-08-26',
          'trading_period': 4,
        }),
        dict({
          'price_cents_per_kwh_excl_gst': 5.457,
          'price_cents_per_kwh_incl_gst': 6.2756,
          'price_dollars_per_mwh': 54.57,
          'schedule': 'L',
          'starts_at': '2026-08-25T14:00:00+00:00',
          'trading_date': '2026-08-26',
          'trading_period': 5,
        }),
        dict({
          'price_cents_per_kwh_excl_gst': 5.478,
          'price_cents_per_kwh_incl_gst': 6.2997,
          'price_dollars_per_mwh': 54.78,
          'schedule': 'L',
          'starts_at': '2026-08-25T14:30:00+00:00',
          'trading_date': '2026-08-26',
          'trading_period': 6,
        }),
        dict({
          'price_cents_per_kwh_excl_gst': 5.498,
          'price_cents_per_kwh_incl_gst': 6.3227,
          'price_dollars_per_mwh': 54.98,
          'schedule': 'L',
          'starts_at': '2026-08-25T15:00:00+00:00',
          'trading_date': '2026-08-26',
          'trading_period': 7,
        }),
        dict({
          'price_cents_per_kwh_excl_gst': 3.296,
          'price_cents_per_kwh_incl_gst': 3.7904,
          'price_dollars_per_mwh': 32.96,
          'schedule': 'L',
          'starts_at': '2026-08-25T15:30:00+00:00',
          'trading_date': '2026-08-26',
          'trading_period': 8,
        }),
        dict({
          'price_cents_per_kwh_excl_gst': 4.55,
          'price_cents_per_kwh_incl_gst': 5.2325,
          'price_dollars_per_mwh': 45.5,
          'schedule': 'L',
          'starts_at': '2026-08-25T16:00:00+00:00',
          'trading_date': '2026-08-26',
          'trading_period': 9,
        }),
        dict({
          'price_cents_per_kwh_excl_gst': 5.581,
          'price_cents_per_kwh_incl_gst': 6.4182,
          'price_dollars_per_mwh': 55.81,
          'schedule': 'L',
          'starts_at': '2026-08-25T16:30:00+00:00',
          'trading_date': '2026-08-26',
          'trading_period': 10,
        }),
        dict({
          'price_cents_per_kwh_excl_gst': 5.567,
          'price_cents_per_kwh_incl_gst': 6.4021,
          'price_dollars_per_mwh': 55.67,
          'schedule': 'L',
          'starts_at': '2026-08-25T17:00:00+00:00',
          'trading_date': '2026-08-26',
          'trading_period': 11,
        }),
        dict({
          'price_cents_per_kwh_excl_gst': 5.615,
          'price_cents_per_kwh_incl_gst': 6.4573,
          'price_dollars_per_mwh': 56.15,
          'schedule': 'L',
          'starts_at': '2026-08-25T17:30:00+00:00',
          'trading_date': '2026-08-26',
          'trading_period': 12,
        }),
        dict({
          'price_cents_per_kwh_excl_gst': 9.901,
          'price_cents_per_kwh_incl_gst': 11.3862,
          'price_dollars_per_mwh': 99.01,
          'schedule': 'L',
          'starts_at': '2026-08-25T18:00:00+00:00',
          'trading_date': '2026-08-26',
          'trading_period': 13,
        }),
        dict({
          'price_cents_per_kwh_excl_gst': 10.98,
          'price_cents_per_kwh_incl_gst': 12.627,
          'price_dollars_per_mwh': 109.8,
          'schedule': 'L',
          'starts_at': '2026-08-25T18:30:00+00:00',
          'trading_date': '2026-08-26',
          'trading_period': 14,
        }),
        dict({
          'price_cents_per_kwh_excl_gst': 9.274,
          'price_cents_per_kwh_incl_gst': 10.6651,
          'price_dollars_per_mwh': 92.74,
          'schedule': 'L',
          'starts_at': '2026-08-25T19:00:00+00:00',
          'trading_date': '2026-08-26',
          'trading_period': 15,
        }),
        dict({
          'price_cents_per_kwh_excl_gst': 10.028,
          'price_cents_per_kwh_incl_gst': 11.5322,
          'price_dollars_per_mwh': 100.28,
          'schedule': 'L',
          'starts_at': '2026-08-25T19:30:00+00:00',
          'trading_date': '2026-08-26',
          'trading_period': 16,
        }),
        dict({
          'price_cents_per_kwh_excl_gst': 7.585,
          'price_cents_per_kwh_incl_gst': 8.7228,
          'price_dollars_per_mwh': 75.85,
          'schedule': 'L',
          'starts_at': '2026-08-25T20:00:00+00:00',
          'trading_date': '2026-08-26',
          'trading_period': 17,
        }),
        dict({
          'price_cents_per_kwh_excl_gst': 1.016,
          'price_cents_per_kwh_incl_gst': 1.1684,
          'price_dollars_per_mwh': 10.16,
          'schedule': 'L',
          'starts_at': '2026-08-25T20:30:00+00:00',
          'trading_date': '2026-08-26',
          'trading_period': 18,
        }),
        dict({
          'price_cents_per_kwh_excl_gst': 0.243,
          'price_cents_per_kwh_incl_gst': 0.2795,
          'price_dollars_per_mwh': 2.43,
          'schedule': 'L',
          'starts_at': '2026-08-25T21:00:00+00:00',
          'trading_date': '2026-08-26',
          'trading_period': 19,
        }),
        dict({
          'price_cents_per_kwh_excl_gst': 0.106,
          'price_cents_per_kwh_incl_gst': 0.1219,
          'price_dollars_per_mwh': 1.06,
          'schedule': 'L',
          'starts_at': '2026-08-25T21:30:00+00:00',
          'trading_date': '2026-08-26',
          'trading_period': 20,
        }),
      ]),
      'published_at': '2026-08-24T12:03:00+00:00',
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: 'c/kWh',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.0000123456ab123_forecast_price',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '7.636',
  })
# ---
# name: test_all_entities[sensor.0000123456ab123_spot_price-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.0000123456ab123_spot_price',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Spot price',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Spot price',
    'platform': 'ecosmart',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'spot_price',
    'unique_id': '0000123456AB123-spot_price',
    'unit_of_measurement': 'c/kWh',
  })
# ---
# name: test_all_entities[sensor.0000123456ab123_spot_price-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.ATTRIBUTION: 'attribution'>: 'Data provided by ecosmart',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: '0000123456AB123 Spot price',
      'gst_rate_percent': 15.0,
      'observed_at': '2026-08-24T12:20:00+00:00',
      'price_cents_per_kwh_excl_gst': 0.2,
      'price_dollars_per_mwh': 2.0,
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: 'c/kWh',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.0000123456ab123_spot_price',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.23',
  })
# ---
